--- a/foo.properties
+++ b/foo.properties
@@ -1,2 +1,63 @@
-foo: from foo props
-democonfigclient.message: hello spring io
+log4j.rootLogger=DEBUG,rolling,errlog,stdout
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} [%-5p] %c{1}.%M:%L-[%X{traceId}]-%m%n
+
+#common log
+log4j.appender.rolling=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rolling.File=${application.base}/logs/common.log
+log4j.appender.rolling.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.rolling.layout=org.apache.log4j.PatternLayout
+log4j.appender.rolling.layout.ConversionPattern=%d{HH:mm:ss.SSS} [%-5p] %-20c{1} [%t]%x [%X{traceId}]-%m%n
+
+#error log
+log4j.appender.errlog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.errlog.Threshold=ERROR
+log4j.appender.errlog.File=${application.base}/logs/error.log
+log4j.appender.errlog.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.errlog.layout=org.apache.log4j.PatternLayout
+log4j.appender.errlog.layout.ConversionPattern=%d{MM-dd HH:mm:ss.SSS} [%-5p] %-20c{1} [%.11t] [%X{traceId}]%x-%m%n
+
+zkServiceAppName=domain-security_wy
+dubbo.zk.address=zookeeper://172.16.61.220:2181
+dubbo.protocol.port=8889
+dubboLog.level =9
+dubbo.registry.group=hans.property
+#接口暴露相关配置
+provider.version=1.0.0
+#接口调用相关配置
+comsumer.version=1.0.0
+
+#\u76EE\u524D\u6D4B\u8BD5\u73AF\u5883\u548C\u6B63\u5F0F\u73AF\u5883\u7528\u540C\u4E00\u4E2ARedis\u5B9E\u4F8B,\u901A\u8FC7\u64CD\u4F5C\u4E0D\u540C\u7684\u5E93\u6765\u5B9E\u73B0\u6570\u636E\u7684\u5206\u79BB
+redis.pool.maxTotal=10
+redis.pool.minIdle=4
+redis.pool.maxIdle=8
+redis.pool.testOnBorrow=true
+
+### beta\u73AF\u5883
+redis.database.index=0
+redis.ip=r-bp1bd75ec86bcec4.redis.rds.aliyuncs.com
+redis.port=6379
+redis.password=DdskfDFAIO1223
+
+### alpha环境
+db.jdbc.driver=com.mysql.jdbc.Driver
+db.jdbc.connection.url=jdbc:mysql://172.16.61.227:3306/domain_security?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
+db.jdbc.username=root
+db.jdbc.password=jihuiduo@123
+druid.initialSize=1
+druid.maxActive=3
+druid.minIdle=1
+druid.maxWait=5000
+druid.removeAbandoned=true
+druid.removeAbandonedTimeout=120000
+druid.timeBetweenEvictionRunsMillis=60000
+druid.minEvictableIdleTimeMillis=40000
+druid.testWhileIdle=true
+druid.testOnBorrow=true
+druid.testOnReturn=true
+druid.poolPreparedStatements=true
+druid.maxPoolPreparedStatementPerConnectionSize=10
+
+
